SonarDelphi version 1.0